--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "web3": "0.20.5"
   },
