--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "typeface-roboto": "^0.0.54",
     "web3": "0.20.5"
   },
   "scripts": {
