--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.67.1",
-    "prettier": "^1.11.1"
+    "prettier": "^1.11.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1"
   }
 }
