--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "flow": "flow",
+    "flow-typed": "flow-typed",
     "lint": "eslint src",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -24,6 +25,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -33,8 +36,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.67.1",
-    "prettier": "^1.11.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1"
+    "flow-typed": "^2.3.0",
+    "jest": "^22.4.2",
+    "prettier": "^1.11.1"
   }
 }
