added cancelable promise

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "material-ui": "^1.0.0-beta.37",
     "ramda": "^0.25.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
@@ -15,7 +15,7 @@
     "web3": "0.20.5"
   },
   "scripts": {
-    "flow": "flow",
+    "flow": "flow; exit 0",
     "flow-typed": "flow-typed",
     "lint": "eslint src",
     "start": "react-scripts start",
@@ -35,7 +35,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
-    "flow-bin": "^0.67.1",
+    "flow-bin": "^0.72.0",
     "prettier": "^1.11.1"
   }
 }
