--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "typeface-roboto": "^0.0.54",
-    "web3": "0.20.5"
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "flow": "flow; exit 0",
