--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "connected-react-router": "^4.3.0",
+    "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.37",
     "ramda": "^0.25.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "^0.0.54",
     "web3": "^1.0.0-beta.34"
   },
@@ -20,7 +25,7 @@
     "lint": "eslint src",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --watchAll=false",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
