--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.37",
+    "moment": "^2.22.2",
     "ramda": "^0.25.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -20,7 +21,7 @@
     "web3": "^1.0.0-beta.34"
   },
   "scripts": {
-    "flow": "flow; exit 0",
+    "flow": "flow",
     "flow-typed": "flow-typed",
     "lint": "eslint src",
     "start": "react-scripts start",
@@ -40,7 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
-    "flow-bin": "^0.72.0",
+    "flow-bin": "^0.82.0",
     "prettier": "^1.11.1"
   }
 }
